@@ -5,6 +5,7 @@
 - Default width set to 80 as many gopherhole and gemini capsule have it hardcoded
 - Streaming URL without valid content-length are now closed after 5Mo of download (thanks to Eoin Carney for reporting the issue)
 - Fixed a crash when the cache is already a dir inside a dir.
+- Fixed a crash when manually entering an unknown gopher URL while offline
 
 ## 1.2 - March 24th 2022
 Very experimental release:
